typecheck/tests/micro/bad/test4.c
int a(void){
	if(1) {
		return 1;
	}
}
		
